--- a/examples/wasm/package.json
+++ b/examples/wasm/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/zondax/ledger-filecoin-js",
   "dependencies": {
     "@babel/runtime": "^7.8.3",
-    "@ledgerhq/hw-transport": "^5.7.0"
+    "@ledgerhq/hw-transport": "^5.7.0",
+    "fcwebsigner": "^0.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
@@ -31,6 +32,7 @@
     "@babel/preset-env": "^7.8.3",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^25.1.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.7.0",
@@ -40,18 +42,13 @@
     "eslint-plugin-vue": "^6.1.2",
     "jest": "^25.1.0",
     "jest-serial-runner": "^1.1.0",
-    "prettier": "^1.19.1",
-    "fcwebsigner" : "^0.0.1"
+    "prettier": "^1.19.1"
   },
   "scripts": {
     "build": "babel src --out-dir dist",
     "test:unit": "jest -c jest.config.unit.js",
-    "test:integration": "jest -c jest.config.integration.js --runInBand --detectOpenHandles"
+    "test:integration": "jest -c jest.config.integration.js --runInBand --detectOpenHandles --no-cache"
   },
-  "moduleDirectories": [
-    "node_modules",
-    "dist"
-  ],
   "postcss": {
     "plugins": {
       "autoprefixer": {}
