--- a/examples/wasm/package.json
+++ b/examples/wasm/package.json
@@ -2,8 +2,6 @@
   "name": "@zondax/ledger-filecoin",
   "version": "0.0.0",
   "description": "Node API for Filecoin App (Ledger Nano S/X)",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zondax/ledger-filecoin-js.git"
@@ -28,6 +26,7 @@
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
     "@babel/node": "^7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "babel-eslint": "^10.0.3",
@@ -47,7 +46,7 @@
   "scripts": {
     "build": "babel src --out-dir dist",
     "test:unit": "jest -c jest.config.unit.js",
-    "test:integration": "jest -c jest.config.integration.js --runInBand --detectOpenHandles --no-cache"
+    "test:integration": "node --experimental-wasm-modules ./node_modules/.bin/jest -c jest.config.integration.js --runInBand --detectOpenHandles --no-cache"
   },
   "postcss": {
     "plugins": {
