--- a/examples/jsonrpc/package.json
+++ b/examples/jsonrpc/package.json
@@ -1,13 +1,34 @@
 {
-  "name": "jsonrpc",
+  "name": "@zondax/filecoin_service_examples",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "description": "Signing Service JSONRPC - Tests and examples",
+  "main": "./src/index.js",
   "dependencies": {
+    "@babel/runtime": "^7.8.3",
     "axios": "^0.19.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jest": "^23.6.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "index.js": "^0.0.3",
+    "jest": "^25.1.0",
+    "jest-serial-runner": "^1.1.0",
+    "prettier": "^1.19.1"
+  },
+  "moduleDirectories": [
+    "node_modules",
+    "dist"
+  ],
+  "scripts": {
+    "test:unit": "jest -c jest.config.unit.js",
+    "test:integration": "jest -c jest.config.integration.js --runInBand --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
