--- a/fcwebsigner/Cargo.toml
+++ b/fcwebsigner/Cargo.toml
@@ -26,6 +26,9 @@ console_error_panic_hook = { version = "0.1.1", optional = true }
 # Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
 wee_alloc = { version = "0.4.2", optional = true }
 
+# import fcsigner
+fcsigner = { path = "../fcsigner" }
+
 [dev-dependencies]
 wasm-bindgen-test = "0.2"
 
