--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.0
 
 jobs:
   build:
@@ -76,17 +76,32 @@ jobs:
       - image: circleci/rust:latest
     steps:
       - checkout
-      - run: cargo install wasm-pack --version 0.8.1
       - run:
-          name: versions
+          name: install node + yarn + n
           command: |
-            rustc --version
-            cargo --version
-            wasm-pack --version
+            sudo apt install nodejs
+            sudo curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+            echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+            sudo apt update && sudo apt install yarn
+            sudo yarn global add n
+            sudo n latest -q
       - run:
-          name: build
+          name: install node + yarn + n
           command: |
-            wasm-pack build fcwebsigner/
+            make deps
+            make build_wasm
+            make link_wasm
+            make test_wasm
+#      - run:
+#          name: versions
+#          command: |
+#            rustc --version
+#            cargo --version
+#            wasm-pack --version
+#      - run:
+#          name: build
+#          command: |
+#            wasm-pack build fcwebsigner/
 
 workflows:
   version: 2
