--- a/fcwebsigner/Cargo.toml
+++ b/fcwebsigner/Cargo.toml
@@ -12,6 +12,9 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2"
+anyhow = "1.0"
+serde_json = "1.0.45"
+
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
