--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
             rustc --version
             cargo --version
             cargo test --lib --all-features
-      - save-sccache-cache
+      # No need to save this in cache
 
   tests_wasm:
     docker:
@@ -76,8 +76,7 @@ jobs:
           name: run tests
           command: |
             make test_wasm
-
-      - save-sccache-cache
+      # No need to save this in cache
 
   tests_service:
     docker:
@@ -106,8 +105,7 @@ jobs:
             cd examples/jsonrpc
             yarn run test:unit
             yarn run test:integration
-
-      - save-sccache-cache
+      # No need to save this in cache
 
 workflows:
   build_all:
