--- a/fcservice/Cargo.toml
+++ b/fcservice/Cargo.toml
@@ -16,6 +16,7 @@ reqwest = { version = "0.10.1", features = ["json", "gzip"] }
 warp = "0.2.1"
 jsonrpc-core = "14.0.5"
 lru = "0.4.3"
+lazy_static = "1.4.0"
 
 [dependencies.abscissa_core]
 version = "0.5.1"
