--- a/examples/wasm/package.json
+++ b/examples/wasm/package.json
@@ -6,5 +6,10 @@
   "license": "Apache-2.0",
   "scripts": {
     "test:integration": "node --experimental-wasm-modules ./tests/index.mjs ./fcwebsigner-test.mjs"
+  },
+  "dependencies": {
+    "bip32": "^2.0.5",
+    "blake2": "^4.0.0",
+    "secp256k1": "^4.0.0"
   }
 }
