--- a/fcwebsigner/Cargo.toml
+++ b/fcwebsigner/Cargo.toml
@@ -14,6 +14,7 @@ default = ["console_error_panic_hook"]
 wasm-bindgen = "0.2"
 anyhow = "1.0"
 serde_json = "1.0.45"
+libsecp256k1 = "0.3.4"
 
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
