--- a/examples/www/package.json
+++ b/examples/www/package.json
@@ -20,9 +20,13 @@
   "author": "Zondax GmbH",
   "license": "Apache-2.0",
   "devDependencies": {
+    "copy-webpack-plugin": "^5.0.0",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "copy-webpack-plugin": "^5.0.0"
+    "webpack-dev-server": "^3.1.5"
+  },
+  "dependencies": {
+    "bip32": "^2.0.5",
+    "blake2b": "^2.1.3"
   }
 }
