--- a/fcservice/Cargo.toml
+++ b/fcservice/Cargo.toml
@@ -26,4 +26,4 @@ version = "0.5.1"
 [dev-dependencies]
 abscissa_core = { version = "0.5.1", features = ["testing"] }
 once_cell = "1.2"
-
+futures-await-test = "0.3"
