--- a/examples/jsonrpc/package.json
+++ b/examples/jsonrpc/package.json
@@ -5,7 +5,10 @@
   "main": "./src/index.js",
   "dependencies": {
     "@babel/runtime": "^7.8.3",
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "bip32": "^2.0.5",
+    "blake2": "^4.0.0",
+    "secp256k1": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
