--- a/fcwebsigner/Cargo.toml
+++ b/fcwebsigner/Cargo.toml
@@ -18,6 +18,8 @@ serde_json = "1.0.45"
 libsecp256k1 = "0.3.4"
 hex = "0.4.0"
 
+getrandom = { version = "0.1.14", features = ["wasm-bindgen"]}
+
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
