--- a/fcsigner/Cargo.toml
+++ b/fcsigner/Cargo.toml
@@ -26,3 +26,6 @@ tiny-bip39 = "0.7.0"
 hmac = "0.7.1"
 zeroize = { version = "1.1", default-features = false, features = ["zeroize_derive"] }
 sha2 = "0.8.1"
+
+log="0.4.8"
+env_logger = "0.7.1"
