--- a/signer-wasm/Cargo.toml
+++ b/signer-wasm/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fcwasmsigner"
+name = "filecoin-signer-wasm"
 version = "0.1.0"
 authors = ["Zondax <info@zondax.ch>"]
 edition = "2018"
@@ -31,8 +31,8 @@ console_error_panic_hook = { version = "0.1.1", optional = true }
 # Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
 wee_alloc = { version = "0.4.2", optional = true }
 
-# import fcsigner
-fcsigner = { path = "../fcsigner" }
+# import filecoin_signer
+filecoin-signer = { path = "../signer" }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.2"
