--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "vuepress build docs"
   },
   "devDependencies": {
-    "vuepress": "^1.3.1"
+    "vuepress": "^1.3.1",
+    "browser-sync": "^2.26.7"
   },
   "dependencies": {
     "mermaid": "^8.4.8"
