--- a/examples/wasm/package.json
+++ b/examples/wasm/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "wasm-example",
+  "name": "example-filecoin-wasm",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "license": "Apache-2.0",
   "scripts": {
-    "test:integration": "node --experimental-wasm-modules ./tests/index.mjs ./fcwasmsigner-test.mjs"
+    "test:integration": "node --experimental-wasm-modules ./tests/index.mjs ./test.mjs"
   },
   "dependencies": {
     "bip32": "^2.0.5",
