--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ Cargo.lock
 **/*.rs.bk
 
 /.idea
-/examples/fcservice.toml
+/examples/filecoin-service.toml
 /examples/wasm/node_modules
 /examples/jsonrpc/.idea/
 /examples/jsonrpc/node_modules
