--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 
 members = [
-    "fcservice",
-    "fcsigner",
-    "fcwebsigner"
+    "service",
+    "signer",
+    "signer-wasm"
 ]
