--- a/examples/wasm/package.json
+++ b/examples/wasm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wasm-example",
+  "name": "example-filecoin-wasm",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
