--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "filecoin-service"
-authors = []
+authors = ["Zondax <info@zondax.ch>"]
 version = "0.1.0"
 edition = "2018"
+license = "Apache-2.0"
+repository = "https://github.com/Zondax/filecoin-rs"
+description =""
 
 [dependencies]
 gumdrop = "0.7"
