--- a/signer-wasm/Cargo.toml
+++ b/signer-wasm/Cargo.toml
@@ -3,6 +3,9 @@ name = "filecoin-signer-wasm"
 version = "0.1.0"
 authors = ["Zondax <info@zondax.ch>"]
 edition = "2018"
+license = "Apache-2.0"
+repository = "https://github.com/Zondax/filecoin-rs"
+description =""
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -38,7 +41,3 @@ filecoin-signer = { path = "../signer" }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.2"
-
-[profile.release]
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
