--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -3,6 +3,9 @@ name = "filecoin-signer"
 version = "0.1.0"
 authors = ["Zondax <info@zondax.ch>"]
 edition = "2018"
+license = "Apache-2.0"
+repository = "https://github.com/Zondax/filecoin-rs"
+description =""
 
 [dependencies]
 num = { version = "0.2.1", features = ["serde"] }
