--- a/examples/wasm_node/package.json
+++ b/examples/wasm_node/package.json
@@ -1,16 +1,30 @@
 {
   "name": "example-filecoin-wasm",
+  "author": "Zondax GmbH",
+  "license": "Apache-2.0",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "license": "Apache-2.0",
   "scripts": {
-    "test:integration": "node ./tests/index.js ./signer-wasm-test.js"
+    "test": "mocha"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Zondax/filecoin-rs"
+  },
+  "keywords": [
+    "webassembly",
+    "wasm",
+    "rust",
+    "filecoin"
+  ],
   "dependencies": {
-    "@zondax/filecoin-signer-wasm": "file:../../signer-wasm/pkg",
+  },
+  "devDependencies": {
+    "@zondax/filecoin-signer-wasm": "^0",
     "bip32": "^2.0.5",
     "blake2": "^4.0.0",
-    "secp256k1": "^4.0.0"
+    "secp256k1": "^4.0.0",
+    "mocha": "^7.1.0"
   }
 }
