--- a/signer-wasm/Cargo.toml
+++ b/signer-wasm/Cargo.toml
@@ -14,7 +14,6 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-wasm-bindgen = "0.2"
 tiny-bip39 = "0.7.0"
 thiserror = "1.0.10"
 serde_json = "1.0.45"
@@ -39,5 +38,10 @@ wee_alloc = { version = "0.4.2", optional = true }
 # import filecoin_signer
 filecoin-signer = { path = "../signer" }
 
+[dependencies.wasm-bindgen]
+version = "^0.2"
+features = ["serde-serialize"]
+
 [dev-dependencies]
 wasm-bindgen-test = "0.2"
+
