filter to master only

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -184,5 +184,8 @@ workflows:
           filters:
             tags:
               only: /^v[0-9]+(\.[0-9]+)*/
+            branches:
+              only:
+                - master
           requires:
             - build
