--- a/examples/jsonrpc/package.json
+++ b/examples/jsonrpc/package.json
@@ -5,15 +5,15 @@
   "main": "./src/index.js",
   "dependencies": {
     "@babel/runtime": "^7.8.3",
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "bip39": "^3.0.2"
   },
   "devDependencies": {
-    "blake2": "^4.0.0",
-    "secp256k1": "^4.0.0",
-    "bip32": "^2.0.5",
     "@babel/core": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
+    "bip32": "^2.0.5",
+    "blake2": "^4.0.0",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.7.0",
@@ -23,7 +23,8 @@
     "index.js": "^0.0.3",
     "jest": "^25.1.0",
     "jest-serial-runner": "^1.1.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "secp256k1": "^4.0.0"
   },
   "moduleDirectories": [
     "node_modules",
