CI script to test and check leaks

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,20 @@ jobs:
             cargo test --lib --all-features
       # No need to save this in cache
 
+  tests_ffi:
+    docker:
+      - image: zondax/rust-ci:latest
+    steps:
+      - checkout
+      - restore-sccache-cache
+      - run:
+          name: Run FFI tests and check memory leaks
+          command: |
+            sudo apt-get install -y jq valgrind
+            cp `cargo test --no-run --message-format=json | jq -r "select(.profile.test == true) | .filenames[]"` libfilecoin_signer_ffi
+            ./libfilecoin_signer_ffi
+            valgrind --leak-check=yes ./libfilecoin_signer_ffi
+
   tests_wasm:
     docker:
       - image: zondax/rust-ci:latest
